library/Judy-0.1.4/tests/github_issue2_003.out
Set INT_TO_MIXED Judy object

Fatal error: Uncaught exception 'Exception' with message 'DateTime::__construct(): It is not safe to rely on the system's timezone settings. You are *required* to use the date.timezone setting or the date_default_timezone_set() function. In case you used any of those methods and you are still getting this warning, you most likely misspelled the timezone identifier. We selected the timezone 'UTC' for now, but please set date.timezone to select your timezone.' in /Users/prggmr/Downloads/Judy-0.1.4/tests/github_issue2_003.php:7
Stack trace:
#0 /Users/prggmr/Downloads/Judy-0.1.4/tests/github_issue2_003.php(7): DateTime->__construct('2012-02-14')
#1 {main}
  thrown in /Users/prggmr/Downloads/Judy-0.1.4/tests/github_issue2_003.php on line 7